--- a/timeline.html
+++ b/timeline.html
@@ -150,7 +150,7 @@
 
   <div class="container_wrapper"> 
     <a href= "https://mcgrath-a.github.io/HIST122FinalProject/" >
-      <img src= "https://thenounproject.com/api/private/icons/282829/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0&token=gAAAAABkKQIH4ThGZ7m7GRB4BYDche5nj6WetjMQ1mgufquBO9CoLnettSasCxer0KcIhf8w7INP81zkYAowFDvLi_fr9l69pg%3D%3D" style="align:top; width:35; height:35px; border:none;" >
+      <img src= "images/home.png" style="align:top; width:35; height:35px; padding:3px;" >
       </a>
     <div class="container_inner"> 
       <div id="correct-answers-container">
