change home color

--- a/timeline.html
+++ b/timeline.html
@@ -150,7 +150,7 @@
 
   <div class="container_wrapper"> 
     <a href= "https://mcgrath-a.github.io/HIST122FinalProject/" >
-      <img src= "images/home.png" style="align:top; width:35; height:35px; padding:3px;" >
+      <img src= "images/black-home.png" style="align:top; width:35; height:35px; padding:3px;" >
       </a>
     <div class="container_inner"> 
       <div id="correct-answers-container">
