adding welcome page skeleton format & fixing TF qs

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ img {vertical-align: center;}
         <span class="tooltiptext">Timeline Page</span>
       </li>
       <li class="tooltip">
-        <a class="nav-link" href="./works-cited.html">Works Cited</a>
+        <a class="nav-link" href="./works.html">Works Cited</a>
         <span class="tooltiptext">Works Cited Page</span>
       </li>  
 </div>
