--- a/timeline.html
+++ b/timeline.html
@@ -149,7 +149,7 @@
 <body>
 
   <div class="container_wrapper"> 
-    <a href= "https://mcgrath-a.github.io/HIST122FinalProject/" >
+    <a href= "index.html" >
       <img src= "images/black-home.png" style="align:top; width:35; height:35px; padding:3px;" >
       </a>
     <div class="container_inner"> 
@@ -168,8 +168,8 @@
 			<div class="timeline-date">2015</div>
       <div class="quiz">
         <p>Question 1: True or False?</p>
-        <button onclick="checkAnswer('true', 'false', 1)" style="background-color: green; color: white;">True</button>
-        <button onclick="checkAnswer('false', 'false', 1)" style="background-color: red; color: white;">False</button>
+        <button onclick="checkAnswer('true', 'true', 1)" style="background-color: green; color: white;">True</button>
+        <button onclick="checkAnswer('true', 'false', 1)" style="background-color: red; color: white;">False</button>
         <span id="feedback-1" class="correct-incorrect"></span>
       </div>
 			<div class="timeline-content" id="timeline-text-1" style="display: none;">
@@ -194,7 +194,7 @@
 			<div class="timeline-date">2015</div>
       <div class="quiz">
         <p>Question 1: True or False?</p>
-        <button onclick="checkAnswer('true', 'false', 2)" style="background-color: green; color: white;">True</button>
+        <button onclick="checkAnswer('false', 'true', 2)" style="background-color: green; color: white;">True</button>
         <button onclick="checkAnswer('true', 'true', 2)" style="background-color: red; color: white;">False</button>
         <span id="feedback-2" class="correct-incorrect"></span>
       </div>
