font and padding on home button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vertical Timeline - Easy Tutorials</title>
     <link rel="stylesheet" href="style.css">
+    <style>  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+    </style>
     
     <style>
 
@@ -146,7 +148,7 @@ img {vertical-align: center;}
 <div class="container_wrapper"> 
   <div class="container_inner">
     <ul class="home__menu">
-        <h1 class="page-title" style="text-align: center;"> Interactive Timeline: Aligning False Narratives and Misconceptions about World War II and the Holocaust</h1>
+        <h1 class="page-title" style="text-align: center;"> Interactive Timeline: Aligning False Narratives and Misconceptions about World War II & the Holocaust</h1>
       <li class="tooltip">
         <a class="nav-link" href="./welcome.html">Welcome</a>
         <span class="tooltiptext">Welcome Page</span>
