fixing error in vscode

--- a/timeline.html
+++ b/timeline.html
@@ -150,7 +150,7 @@
 
   <div class="container_wrapper"> 
     <a href= "index.html" >
-      <img src= "images/black-home.png" style="align:top; width:35; height:35px; padding:7px;" >
+      <img src= "images/black-home.png" style="top:auto; width:35; height:35px; padding:7px" >
       </a>
     <div class="container_inner"> 
       <div id="correct-answers-container">
