--- a/welcome.html
+++ b/welcome.html
@@ -17,7 +17,7 @@
 <!-- Landing page -->
 <div class="container_wrapper"> 
     <a href= "index.html" >
-        <img src= "images/black-home.png" style="align:top; width:35; height:35px; padding:7px;" >
+        <img src= "images/black-home.png" style="top:auto; width:35; height:35px; padding:7px" >
     </a>
     <div class="container_inner">
         <h1 class="page-title" style="text-align: center;"> Welcome: Background & Artist Vision</h1>
