fixing read more modal

--- a/timeline.html
+++ b/timeline.html
@@ -181,8 +181,28 @@
           <div class="modal-content">
             <span class="close">&times;</span>
             <br>
-            <img src="images/black.jpeg" alt="Your Image Description" class="modal-image" width="400" height="400">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras porttitor metus justo, ut fringilla nibh pretium a. Fusce laoreet consequat sapien, id congue</p>
+            <div class = "clearfix">
+              <img class="modal-image" src="images/prisoners.png" alt="Pineapple" title="this will be displayed as a tooltip" 
+              width="526" height="739" padding = "8px">
+            <p style="color: white; font-size: 18px;"> 
+            <b> Section One </b>
+            <br>
+            <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel justo vitae odio sagittis vulputate non nec velit. Etiam et justo eu dolor convallis tincidunt. In ultricies libero lorem, eget semper lectus egestas in. Sed facilisis odio ac orci pretium, sed vestibulum ligula fringilla. Proin egestas neque non tristique vestibulum. Praesent euismod, sapien non fermentum pretium, mauris eros malesuada enim, et tincidunt mi dolor in lectus.
+            <br>
+            <br>
+            <b>Section 2</b>
+            <br>
+            <br>
+            Pellentesque vel imperdiet turpis, vitae dictum arcu. Quisque fermentum turpis sapien, eget tristique erat auctor in. Ut dapibus, lorem a cursus auctor, sapien purus aliquam neque, eget iaculis ante odio vitae libero. Fusce in eros dolor. Nam ut ipsum dapibus, fermentum orci id, cursus dolor. Mauris at diam odio. In consequat vehicula magna, ut tempor justo ultricies vel. Vivamus dictum bibendum odio, ac venenatis nisl mollis non.
+            <br>
+            <br>
+            <b>Section 3</b>
+            <br>
+            <br>
+            Morbi condimentum nibh vel sapien suscipit, vitae vulputate erat bibendum. Cras bibendum laoreet mauris, in malesuada mauris sodales nec. Integer sed erat consequat, fringilla sem ac, accumsan sapien. Nunc auctor vestibulum ligula, eu maximus mi dignissim a. Integer facilisis, sapien eu bibendum volutpat, nisi lorem egestas sapien, non venenatis ligula libero ut sapien. Duis porttitor convallis quam, in ullamcorper tellus bibendum vel. Fusce vitae ullamcorper nulla, at varius quam.
+            </p>
+            </div>
           </div>
         </div>
       </div>
