--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vertical Timeline - Easy Tutorials</title>
+    <title>HIST122: Final Project</title>
     <link rel="stylesheet" href="style.css">
     <style>  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
     </style>
