--- a/timeline.html
+++ b/timeline.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vertical Timeline - Easy Tutorials</title>
+    <title>Timeline</title>
     <link rel="stylesheet" href="style.css">
     <style>  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
       *{
@@ -68,17 +68,20 @@
         border-radius: 5px;
       }
       .timeline-content h3{
-          font-size: 20px;
+          font-size: 18px;
         color: #ffffff;
         margin:0 0 10px;
         text-transform: capitalize;
         font-weight: 500;
+        text-align: center;
+       
       }
       .timeline-content p{
           color: #c8c8c8;
         font-size: 16px;
         font-weight: 300;
         line-height: 22px;
+   
       }
       .read-more {
         display: inline-block;
@@ -162,19 +165,25 @@
  <section class="timeline-section">
 	<div class="timeline-items">
 
-     <!-- timeline item 1 -->
+     <!-- QUESTION 1: ANSWER= FALSE-->
 		<div class="timeline-item">
 			<div class="timeline-dot"></div>
-			<div class="timeline-date">2015</div>
+			<div class="timeline-date">1922</div>
       <div class="quiz">
-        <p>Question 1: True or False?</p>
-        <button onclick="checkAnswer('true', 'true', 1)" style="background-color: green; color: white;">True</button>
-        <button onclick="checkAnswer('true', 'false', 1)" style="background-color: red; color: white;">False</button>
+        <p> <b>Question 1: </b>Mussolini's rise to power in Italy and his structure of fascism did not influence the rise of Nazism in Germany</p>
+        <button onclick="checkAnswer('true', 'false', 1)" style="background-color: green; color: white;">True</button>
+        <button onclick="checkAnswer('true', 'true', 1)" style="background-color: red; color: white;">False</button>
         <span id="feedback-1" class="correct-incorrect"></span>
       </div>
 			<div class="timeline-content" id="timeline-text-1" style="display: none;">
-        <h3>timeline item title</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <h3>Mussolini comes to power in Italy</h3>
+        <p>
+          The statement is false. Mussolini's rise to power and his conception of fascism 
+          did have an impact on the rise of Nazism in Germany. Mussolini’s conception of fascism 
+          laid the groundwork for similar ideologies, such as Nazism, which shared several core 
+          tenets, including nationalism, totalitarianism, and anti-democratic ideals.
+
+        </p>
         <button class="read-more" id="info-btn-1" style="background-color: purple; color: white;">Read More</button>
 
         <div class="modal" id="modal-1">
