first steps to final website

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ img {vertical-align: center;}
     <div class="mySlides fade">
       <div class="numbertext">1 / 4</div>
       <img src="images/peace.jpeg" style="width:100%">
-      <div class="text">Caption Text</div>
+      <div class="text">Caption One</div>
     </div>
     
     <div class="mySlides fade">
@@ -186,7 +186,7 @@ img {vertical-align: center;}
     <div class="mySlides fade">
         <div class="numbertext">4 / 4</div>
         <img src="images/holocaust.jpeg" style="width:100%">
-        <div class="text">Caption Three</div>
+        <div class="text">Caption Four</div>
       </div>
 
      
