zoom on modal images

--- a/welcome.html
+++ b/welcome.html
@@ -145,9 +145,10 @@
                 the event and how it relates to the course and society, and 4) the sources.</div>
           </div>
           <div class="mySlides">
-            <img src="images/welcome-slideshow/hover2.png" style="width:100%">
-            <div class="caption">Hovering over of the image will reveal a tool-tip that shows a 
-                brief caption/description of the image that relates to that event.
+            <img src="images/welcome-slideshow/hover-zoom.png" style="width: 793px;
+            height: 440px;">
+            <div class="caption">Hovering over of the image for a few seconds will do 2 things 1)<b>enlarge</b> the image to zoom in, and 2)reveal a tool-tip that shows a 
+                brief <b>caption and/or description </b>of the image that relates to that event.
             </div>
           </div>
         <div class="mySlides">
