--- a/welcome.html
+++ b/welcome.html
@@ -64,7 +64,7 @@
         <h1 class="page-title" style="text-align: center;"> <b>Welcome: Background & Artist Vision</b></h1>
        
         <p style = "font-family:'Poppins', sans-serif;font-size:20px;">
-            Welcome to my final project for HIST 122: Rise, Fall, and Rebirth: Europe Since the Enlightenment, Spring Semester 2023. I'm excited to introduce you to this interactive learning experience, where you'll explore key events and themes from our course.
+            Welcome to my final project for <i>HIST 122: Rise, Fall, and Rebirth: Europe Since the Enlightenment</i>, Spring Semester 2023. I'm excited to introduce you to this interactive learning experience, where you'll explore key events and themes from our course.
         </p>
        
     <p>
@@ -93,7 +93,7 @@
     <p style = "font-family:'Poppins', sans-serif;font-size:20px;">
         This timeline, coded from scratch with HTML, CSS, and JavaScript, is tailored to fit my creative vision, 
         using programming resources like Stack Overflow and Google as needed. The code files and resources will be 
-        available for viewing on my GitHub portfolio (here). GitHub is a web-based platform that facilitates version 
+        available for viewing on my GitHub portfolio <a href="https://github.com/mcgrath-a/HIST122FinalProject" > click here</a>. GitHub is a web-based platform that facilitates version 
         control and collaboration, allowing users to manage and store revisions of their projects, including code files, 
         and share them with others. 
         <br>
@@ -107,7 +107,12 @@
             By creating this interactive learning experience, I hope to provide students, educators, history enthusiasts, and individuals with a tool that allows 
             them to delve deeper into these historical events and gain a greater understanding of the complexities surrounding World War II and the Holocaust. 
             Through the use of True or False questions, my project aims to debunk common misconceptions and reveal the truth behind these pivotal moments in history, 
-            highlighting the connections between course themes and showcasing the importance of accurate historical representation. 
+            highlighting the connections between course themes and showcasing the importance of accurate historical representation.
+            <br>
+            <br>
+            This website has over 1,600 lines of code. I am very particular when it comes to projects, 
+        esepcially ones where I have creative freedom, I hope that not only is my enegagemnt with the course material evident
+         but you (the audience) is immersed in the website as I have spent many hours making it taiolored to my liking :)
         </p>
         <br>
         <br>
@@ -189,6 +194,8 @@
             events, analyzing them based on our class discussions and lectures. As a Computer Science major, I found it rewarding 
             to apply my programming skills to a historical context, bringing these important events to life in an interactive and 
             engaging way. I hope you enjoy exploring this timeline as much as I enjoyed creating it!
+          <br>
+          <br>
           <br>
           </p>
         </div>
