--- a/timeline.html
+++ b/timeline.html
@@ -799,7 +799,7 @@
           <div class="timeline-dot"></div>
           <div class="timeline-date">1944</div>
           <div class="quiz">
-            <p><b>Statement 8:</b> Isaac Fadoyebo was an African American soldier turned hero in WW2, that fought with America to regain his freedom upon return home</p>
+            <p><b>Statement 8:</b> Isaac Fadoyebo was an African American soldier turned hero in WW2, that fought with America to regain his freedom upon return home.</p>
             <button onclick="checkAnswer('false', 'true', 8)" style="background-color: green; color: white;">True</button>
             <button onclick="checkAnswer('true', 'true', 8)" style="background-color: red; color: white;">False</button>
             <span id="feedback-8" class="correct-incorrect"></span>
@@ -974,13 +974,13 @@
       <div class="timeline-dot"></div>
       <div class="timeline-date">WWII - late 20th century</div>
       <div class="quiz">
-        <p><b>Statement 10:</b> Theodor Michael was a Black German, not an African American, who faced racial discrimination and persecution while living in Nazi Germany</p>
+        <p><b>Statement 10:</b> Theodor Michael was a Black German, not an African American, who faced racial discrimination and persecution while living in Nazi Germany.</p>
         <button onclick="checkAnswer('true', 'true', 10)" style="background-color: green; color: white;">True</button>
         <button onclick="checkAnswer('false', 'true', 10)" style="background-color: red; color: white;">False</button>
         <span id="feedback-10" class="correct-incorrect"></span>
       </div>
       <div class="timeline-content" id="timeline-text-10" style="display: none;">
-        <h3>timeline item title</h3>
+        <h3>Black in Germany: Theodor Michael's story</h3>
         <p class = "noselect">Theodor Michael was a Black German, not an African American, who faced racial discrimination and persecution 
           while living in Nazi Germany. Born in Berlin, he was one of the few Black Germans living during this time, a
           nd his experience was vastly different from that of African Americans. Michael was subjected to the harsh racial 
