--- a/timeline.html
+++ b/timeline.html
@@ -467,7 +467,7 @@
 			<div class="timeline-date">November 1938</div>
       <div class="quiz">
         <p><b>Statement 4: </b>Kristallnacht was an event started and initiated by the Jews trying to instigate violence among the people.</p>
-        <button onclick="checkAnswer('false', 'true', 4)" style="background-color: green; color: white;">True</button>
+        <button onclick="checkAnswer('false', 'true', 4)" style="background-color: green; color: white;">This is a very long answer that </button>
         <button onclick="checkAnswer('true', 'true', 4)" style="background-color: red; color: white;">False</button>
         <span id="feedback-4" class="correct-incorrect"></span>
       </div>
